--- a/.gitignore
+++ b/.gitignore
@@ -20,19 +20,6 @@
 # production
 /build
 
-# misc
-.DS_Store
-*.pem
+# local data storage
+/.data/
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
